added mBert & XLM-R

--- a/Research.ipynb
+++ b/Research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,10 @@
     "from sklearn.cluster import KMeans\n",
     "\n",
     "import tensorflow_hub as hub\n",
-    "import tensorflow_text"
+    "import tensorflow_text\n",
+    "\n",
+    "from transformers import BertTokenizer, BertModel\n",
+    "import torch"
    ]
   },
   {
@@ -39,9 +42,6 @@
     }
    ],
    "source": [
-    "from transformers import BertTokenizer, BertModel\n",
-    "import torch\n",
-    "\n",
     "tokenizer = BertTokenizer.from_pretrained(\"bert-base-uncased\")\n",
     "model = BertModel.from_pretrained(\"bert-base-uncased\")\n",
     "\n",
@@ -203,7 +203,69 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lang_idx = {\n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 100%|██████████| 972k/972k [00:01<00:00, 711kB/s]\n",
+      "Downloading: 100%|██████████| 29.0/29.0 [00:00<00:00, 1.59kB/s]\n",
+      "Downloading: 100%|██████████| 1.87M/1.87M [00:01<00:00, 1.94MB/s]\n",
+      "Downloading: 100%|██████████| 625/625 [00:00<00:00, 34.1kB/s]\n",
+      "Downloading: 100%|██████████| 681M/681M [10:59<00:00, 1.08MB/s]  \n",
+      "Some weights of the model checkpoint at bert-base-multilingual-cased were not used when initializing BertModel: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-multilingual-cased\")\n",
+    "m_bert = BertModel.from_pretrained(\"bert-base-multilingual-cased\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 100%|██████████| 1.04G/1.04G [21:41<00:00, 857kB/s] \n",
+      "Some weights of the model checkpoint at xlm-roberta-base were not used when initializing XLMRobertaModel: ['lm_head.layer_norm.bias', 'lm_head.dense.bias', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight', 'lm_head.dense.weight', 'lm_head.bias']\n",
+      "- This IS expected if you are initializing XLMRobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing XLMRobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import XLMRobertaTokenizer\n",
+    "from transformers import XLMRobertaModel\n",
+    "\n",
+    "x_tokenizer = XLMRobertaTokenizer.from_pretrained(\"xlm-roberta-base\")\n",
+    "xlm_r = XLMRobertaModel.from_pretrained(\"xlm-roberta-base\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# distilbert-base-multilingual-cased"
+   ]
   }
  ],
  "metadata": {
