new models, dataset, sentence embeddings

--- a/Research.ipynb
+++ b/Research.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Brad\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.8_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python38\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns; sns.set()\n",
@@ -28,7 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.weight', 'cls.predictions.bias', 'cls.predictions.decoder.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -80,39 +89,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading and preparing dataset xnli/all_languages (download: 461.54 MiB, generated: 1.50 GiB, post-processed: Unknown size, total: 1.95 GiB) to C:\\Users\\Brad\\.cache\\huggingface\\datasets\\xnli\\all_languages\\1.1.0\\818164464f9c9fd15776ca8a00423b074344c3e929d00a2c1a84aa5a50c928bd...\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading data files: 100%|██████████| 2/2 [00:00<00:00, 128.40it/s]\n",
-      "Extracting data files: 100%|██████████| 2/2 [00:00<00:00, 197.19it/s]\n",
-      "Downloading data files:   0%|          | 0/2 [35:21<?, ?it/s]\n",
-      "Downloading data files:   0%|          | 0/2 [1:01:23<?, ?it/s]\n",
-      "                                                                                         \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset xnli downloaded and prepared to C:\\Users\\Brad\\.cache\\huggingface\\datasets\\xnli\\all_languages\\1.1.0\\818164464f9c9fd15776ca8a00423b074344c3e929d00a2c1a84aa5a50c928bd. Subsequent calls will reuse this data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [00:00<00:00,  5.85it/s]\n"
+      "Reusing dataset xnli (C:\\Users\\Brad\\.cache\\huggingface\\datasets\\xnli\\all_languages\\1.1.0\\818164464f9c9fd15776ca8a00423b074344c3e929d00a2c1a84aa5a50c928bd)\n",
+      "100%|██████████| 3/3 [00:00<00:00,  4.31it/s]\n"
      ]
     }
    ],
@@ -124,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +131,7 @@
        "})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +174,7 @@
        " 'zh': '从 概念 上 看 , 奶油 收入 有 两 个 基本 方面 产品 和 地理 .'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,13 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lang_idx = {\n",
-    "    \n",
-    "}"
+    "# new_models in sentence transformers org\n",
+    "miniLM = \"sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2\"\n",
+    "distil = \"sentence-transformers/distiluse-base-multilingual-cased-v2\"\n",
+    "xlm = \"sentence-transformers/paraphrase-xlm-r-multilingual-v1\"\n"
    ]
   },
   {
@@ -218,44 +204,93 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 972k/972k [00:01<00:00, 711kB/s]\n",
-      "Downloading: 100%|██████████| 29.0/29.0 [00:00<00:00, 1.59kB/s]\n",
-      "Downloading: 100%|██████████| 1.87M/1.87M [00:01<00:00, 1.94MB/s]\n",
-      "Downloading: 100%|██████████| 625/625 [00:00<00:00, 34.1kB/s]\n",
-      "Downloading: 100%|██████████| 681M/681M [10:59<00:00, 1.08MB/s]  \n",
-      "Some weights of the model checkpoint at bert-base-multilingual-cased were not used when initializing BertModel: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.decoder.weight']\n",
-      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+      "Downloading: 100%|██████████| 690/690 [00:00<?, ?B/s] \n",
+      "Downloading: 100%|██████████| 190/190 [00:00<?, ?B/s] \n",
+      "Downloading: 100%|██████████| 114/114 [00:00<?, ?B/s] \n",
+      "Downloading: 100%|██████████| 1.58M/1.58M [00:00<00:00, 2.89MB/s]\n",
+      "Downloading: 100%|██████████| 2.38k/2.38k [00:00<00:00, 149kB/s]\n",
+      "Downloading: 100%|██████████| 610/610 [00:00<00:00, 76.8kB/s]\n",
+      "Downloading: 100%|██████████| 122/122 [00:00<00:00, 15.2kB/s]\n",
+      "Downloading: 100%|██████████| 341/341 [00:00<?, ?B/s] \n",
+      "Downloading: 100%|██████████| 539M/539M [03:05<00:00, 2.91MB/s] \n",
+      "Downloading: 100%|██████████| 53.0/53.0 [00:00<00:00, 6.62kB/s]\n",
+      "Downloading: 100%|██████████| 112/112 [00:00<?, ?B/s] \n",
+      "Downloading: 100%|██████████| 1.96M/1.96M [00:00<00:00, 2.92MB/s]\n",
+      "Downloading: 100%|██████████| 531/531 [00:00<?, ?B/s] \n",
+      "Downloading: 100%|██████████| 996k/996k [00:00<00:00, 2.83MB/s]\n",
+      "Downloading: 100%|██████████| 345/345 [00:00<?, ?B/s] \n",
+      "Downloading: 100%|██████████| 190/190 [00:00<?, ?B/s] \n",
+      "Downloading: 100%|██████████| 3.74k/3.74k [00:00<?, ?B/s]\n",
+      "Downloading: 100%|██████████| 718/718 [00:00<?, ?B/s] \n",
+      "Downloading: 100%|██████████| 122/122 [00:00<00:00, 15.8kB/s]\n",
+      "Downloading: 100%|██████████| 229/229 [00:00<?, ?B/s] \n",
+      "Downloading: 100%|██████████| 1.11G/1.11G [06:41<00:00, 2.77MB/s]\n",
+      "Downloading: 100%|██████████| 53.0/53.0 [00:00<00:00, 6.77kB/s]\n",
+      "Downloading: 100%|██████████| 5.07M/5.07M [00:01<00:00, 2.98MB/s]\n",
+      "Downloading: 100%|██████████| 150/150 [00:00<00:00, 72.4kB/s]\n",
+      "Downloading: 100%|██████████| 9.10M/9.10M [00:03<00:00, 2.98MB/s]\n",
+      "Downloading: 100%|██████████| 550/550 [00:00<00:00, 68.8kB/s]\n"
      ]
     }
    ],
    "source": [
-    "tokenizer = BertTokenizer.from_pretrained(\"bert-base-multilingual-cased\")\n",
-    "m_bert = BertModel.from_pretrained(\"bert-base-multilingual-cased\")"
+    "from sentence_transformers import SentenceTransformer\n",
+    "miniLM_model = SentenceTransformer(miniLM)\n",
+    "distil_model = SentenceTransformer(distil)\n",
+    "xlm_model = SentenceTransformer(xlm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 1.04G/1.04G [21:41<00:00, 857kB/s] \n",
-      "Some weights of the model checkpoint at xlm-roberta-base were not used when initializing XLMRobertaModel: ['lm_head.layer_norm.bias', 'lm_head.dense.bias', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight', 'lm_head.dense.weight', 'lm_head.bias']\n",
-      "- This IS expected if you are initializing XLMRobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing XLMRobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+      "ar - و قد ال كريم المفاهيمية اثنان اساسيين - المنتج والجغرافيا .\n",
+      "bg концептуално крем краде има две основни измерения - продукт и география .\n",
+      "de Konzeptionell cream abschöpfen hat zwei grundlegende Dimensionen - Produkt und Geographie .\n",
+      "el Η εννοιολογικά κρέμα κρέμα έχει δύο βασικές διαστάσεις - προϊόν και γεωγραφία .\n",
+      "en Conceptually cream skimming has two basic dimensions - product and geography .\n",
+      "es Los robando de crema conceptualmente tienen dos dimensiones básicas : producto y geografía .\n",
+      "fr L' écrémage conceptuel de la crème a deux dimensions fondamentales : le produit et la géographie .\n",
+      "hi Conceptually क ् रीम एंजलिस में दो मूल आयाम हैं - उत ् पाद और भूगोल ।\n",
+      "ru Концептуально крем крем имеет два основных измерения - продукт и география .\n",
+      "sw Sakata cream ya conceptually ina vipimo viwili vya msingi - bidhaa na geography .\n",
+      "th ท่า ครีม ยักยอก มี สอง มิติ พื้นฐาน   -   สินค้า และ ภูมิศาสตร์\n",
+      "tr Kavramsal krem kaymağını iki temel boyutu vardır - ürün ve coğrafya .\n",
+      "ur ارضیات کی ناپیدی اور جغرافیہ نے دو بنیادی فسل تصاویر اور جغرافیہ کا اشتراک کیا ہے ۔\n",
+      "vi Conceptually kem skimming có hai kích thước cơ bản - sản phẩm và địa lý .\n",
+      "zh 从 概念 上 看 , 奶油 收入 有 两 个 基本 方面 产品 和 地理 .\n"
      ]
     }
    ],
    "source": [
-    "from transformers import XLMRobertaTokenizer\n",
-    "from transformers import XLMRobertaModel\n",
+    "for i in xnli[0]:\n",
+    "    print(i + \" \" + xnli[0][i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loop through the data and get word embeddings\n",
+    "embed_list = []\n",
     "\n",
-    "x_tokenizer = XLMRobertaTokenizer.from_pretrained(\"xlm-roberta-base\")\n",
-    "xlm_r = XLMRobertaModel.from_pretrained(\"xlm-roberta-base\")"
+    "for idx, i in enumerate(xnli):\n",
+    "    new_entry = {}\n",
+    "    for i in xnli[idx]:\n",
+    "        lang_id = i\n",
+    "        lang_value = xnli[idx][i]\n",
+    "\n",
+    "        embeddings = miniLM_model.encode(lang_value)\n",
+    "\n",
+    "        new_entry[lang_id] = embeddings\n",
+    "    embed_list.append(new_entry)"
    ]
   },
   {
@@ -264,7 +299,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# distilbert-base-multilingual-cased"
+    "def wcss(vectors):\n",
+    "    vectors = list(embed_list[0].values())\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cluster the sentence blocks using k-means and wss\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "\n",
+    "\n",
+    "kmeans = KMeans(n_clusters=3)\n",
+    "vectors = list(embed_list[0].values())\n",
+    "kmeans.fit(vectors)\n",
+    "y_kmeans = kmeans.predict(vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 2, 2, 2, 1, 2, 0, 2, 0, 2, 2, 0, 2, 1])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_kmeans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(512,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "embeddings = distil_model.encode(\"I am a sentence\")\n",
+    "print(embeddings.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-multilingual-cased were not used when initializing BertModel: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.seq_relationship.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# OLD MODELS\n",
+    "\n",
+    "# tokenizer = BertTokenizer.from_pretrained(\"bert-base-multilingual-cased\")\n",
+    "# m_bert = BertModel.from_pretrained(\"bert-base-multilingual-cased\")\n",
+    "\n",
+    "# from transformers import XLMRobertaTokenizer\n",
+    "# from transformers import XLMRobertaModel\n",
+    "\n",
+    "# x_tokenizer = XLMRobertaTokenizer.from_pretrained(\"xlm-roberta-base\")\n",
+    "# xlm_r = XLMRobertaModel.from_pretrained(\"xlm-roberta-base\")\n",
+    "# # distilbert-base-multilingual-cased\n",
+    "\n",
+    "# d_tokenizer = BertTokenizer.from_pretrained(\"distilbert-base-multilingual-cased\")\n",
+    "# distil = BertModel.from_pretrained(\"distilbert-base-multilingual-cased\")"
    ]
   }
  ],
